--- a/src/app/assets/styles.css
+++ b/src/app/assets/styles.css
@@ -1,3 +1,14 @@
+@keyframes appearing-animation {
+  0% {
+    opacity: 0;
+    transform: translateY(5vh);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
 .v-label {
   padding-left: 4px !important;
 }
